# server/swagger_server/models/nums.py
@@ -14,6 +14,7 @@ class Nums(Model):
 
     Do not edit the class manually.
     """
+
     def __init__(self, num1: float=None, num2: float=None, operation: str=None):  # noqa: E501
         """Nums - a model defined in Swagger
 
@@ -35,6 +36,7 @@ class Nums(Model):
             'num2': 'num2',
             'operation': 'operation'
         }
+
         self._num1 = num1
         self._num2 = num2
         self._operation = operation
@@ -68,8 +70,6 @@ class Nums(Model):
         :param num1: The num1 of this Nums.
         :type num1: float
         """
-        if num1 is None:
-            raise ValueError("Invalid value for `num1`, must not be `None`")  # noqa: E501
 
         self._num1 = num1
 
@@ -91,8 +91,6 @@ class Nums(Model):
         :param num2: The num2 of this Nums.
         :type num2: float
         """
-        if num2 is None:
-            raise ValueError("Invalid value for `num2`, must not be `None`")  # noqa: E501
 
         self._num2 = num2
 
